# APSI

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  APSI.sln  CHANGES.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  HiPsi.sln  README.md  azure-pipelines.yml  new_terminology.txt  params.txt
APSI/: APSI.vcxproj  APSI.vcxproj.filters  CMakeLists.txt  Makefile  item.cpp  psiparams.cpp
APSI/apsi/: CMakeLists.txt  apsi.h  apsidefines.cpp  apsidefines.h  item.cpp  item.h  plaintextarith.cpp  plaintextarith.h  psiparams.cpp  psiparams.h  utils.cpp  utils.h
APSI/apsi/Network/: network_utils.cpp  network_utils.h
APSI/apsi/Receiver/: receiver.cpp  receiver.h
APSI/apsi/Sender/: sender.cpp  sender.h  senderdb.cpp  senderdb.h  senderthreadcontext.h
APSI/apsi/Tools/: interpolate.cpp  interpolate.h
APSI/apsi/ffield/: CMakeLists.txt  ffield.cpp  ffield.h  ffield_array.h  ffield_batch_encoder.cpp  ffield_batch_encoder.h  ffield_crt_builder.cpp  ffield_crt_builder.h  ffield_elt.cpp  ffield_elt.h  ffield_fast_batch_encoder.cpp  ffield_fast_batch_encoder.h  ffield_fast_crt_builder.cpp  ffield_fast_crt_builder.h  ffield_ntt.cpp  ffield_ntt.h  ffield_poly.h
APSI/apsi/logging/: CMakeLists.txt  log.cpp  log.h
APSI/apsi/network/: CMakeLists.txt  channel.cpp  channel.h  network_utils.cpp  network_utils.h  receiverchannel.cpp  receiverchannel.h  senderchannel.cpp  senderchannel.h  senderoperation.h  senderoperationresponse.h
APSI/apsi/receiver/: CMakeLists.txt  receiver.cpp  receiver.h
APSI/apsi/sender/: CMakeLists.txt  dbblock.cpp  dbblock.h  sender.cpp  sender.h  senderdb.cpp  senderdb.h  senderdispatcher.cpp  senderdispatcher.h  sendersessioncontext.h  senderthreadcontext.h
APSI/apsi/tools/: CMakeLists.txt  aes.cpp  aes.h  bigpoly.cpp  bigpoly.h  bigpolyarray.cpp  bigpolyarray.h  binsizemath.cpp  binsizemath.h  csvreader.cpp  csvreader.h  ec_utils.cpp  ec_utils.h  interpolate.cpp  interpolate.h  matrix.h  matrixview.h  nussbaumer.cpp  nussbaumer.h  polyfftmultsmallmod.cpp  polyfftmultsmallmod.h  polymodulus.cpp  polymodulus.h  prng.h  (+8 more)
APSI/include/: apsi.h  apsidefines.h  clp.h  defines.h  item.h  plaintextarith.h  psiparams.h  sender.h  stopwatch.h
APSI/src/: apsidefines.cpp  clp.cpp  item.cpp  plaintextarith.cpp  psiparams.cpp  sender.cpp
APSICommon/: APSICommon.vcxproj  APSICommon.vcxproj.filters  CMakeLists.txt
APSICommon/apsi/: CMakeLists.txt  apsi.h  apsidefines.cpp  apsidefines.h  item.cpp  item.h  psiparams.h  result_package.h
APSICommon/cmake/: APSICommonConfig.cmake.in  APSIConfig.cmake.in  FindFlint.cmake  FindFourQ.cmake  FindFourQlib.cmake  FindLog4cplus.cmake  FindTCLAP.cmake  FindZeroMQ.cmake  FindZeroMQpp.cmake  Findmsgsl.cmake
APSINative/: APSINative.vcxproj  CMakeLists.txt  apsinative.cpp  apsinative.h  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
APSIReceiver/: APSIReceiver.vcxproj  APSIReceiver.vcxproj.filters  CMakeLists.txt
APSIReceiver/apsi/: CMakeLists.txt  receiver.cpp  receiver.h
APSIReceiver/cmake/: APSIReceiverConfig.cmake.in
APSISender/: APSISender.vcxproj  APSISender.vcxproj.filters  CMakeLists.txt
APSISender/apsi/: CMakeLists.txt  dbblock.cpp  dbblock.h  sender.cpp  sender.h  senderdb.cpp  senderdb.h  senderdispatcher.cpp  senderdispatcher.h  sendersessioncontext.h  senderthreadcontext.h
APSISender/cmake/: APSISenderConfig.cmake.in
APSITests/: APSITests.vcxproj  APSITests.vcxproj.filters  CMakeLists.txt  Makefile  aes_tests.cpp  aes_tests.h  bit_copy_test.cpp  channel_tests.cpp  channel_tests.h  csvreader_tests.cpp  csvreader_tests.h  fourq_tests.cpp  fourq_tests.h  interpolate_tests.cpp  interpolate_tests.h  item.cpp  item.h  matrix_tests.cpp  plaintextarith.cpp  prng_tests.cpp  prng_tests.h  receiver.cpp  sender.cpp  stdafx.cpp  stopwatch_tests.cpp  stopwatch_tests.h  unit_tests_runner.cpp  unit_tests_runner.h  utils_tests.cpp
APSITests/src/: CMakeLists.txt  aes_tests.cpp  bit_copy_test.cpp  bit_copy_test.h  channel_tests.cpp  csvreader_tests.cpp  fourq_tests.cpp  interpolate_tests.cpp  item.cpp  matrix_tests.cpp  matrix_tests.h  oprf_tests.cpp  plaintextarith.cpp  plaintextarith.h  prng_tests.cpp  receiver.cpp  sender.cpp  stopwatch_tests.cpp  stream_channel_tests.cpp  unit_tests_runner.cpp  utils.h  utils_tests.cpp  utils_tests.h
CommonCLI/: CMakeLists.txt  CommonCLI.vcxproj  CommonCode.vcxproj  common_utils.cpp  common_utils.h
CommonCLI/cmake/: CommonCLIConfig.cmake.in
CommonCode/: CMakeLists.txt  CommonCode.vcxproj  Makefile  base_clp.h  common_utils.cpp  common_utils.h
CommonCodeCLI/: CMakeLists.txt  CommonCode.vcxproj  CommonCode.vcxproj.filters  base_clp.h  common_utils.cpp  common_utils.h
Cuckoo/: CMakeLists.txt  Cuckoo.vcxproj  Cuckoo.vcxproj.filters
Cuckoo/cmake/: CuckooConfig.cmake  CuckooConfig.cmake.in  CuckooConfigVersion.cmake  CuckooTargets.cmake
Cuckoo/cuckoo/: CMakeLists.txt  aes.cpp  aes.h  common.h  config.h  config.h.in  cuckoo.cpp  cuckoo.h  locfunc.h
IntegrationTests/: CMakeLists.txt  IntegrationTests.cpp  IntegrationTests.vcxproj  IntegrationTests.vcxproj.filters  Makefile  senderreceivertests.cpp  senderreceivertests.h
IntegrationTests/src/: CMakeLists.txt  IntegrationTests.cpp  senderreceivertests.cpp
ReceiverCLI/: CMakeLists.txt  Receiver.vcxproj  Receiver.vcxproj.filters
ReceiverCLI/src/: clp.h  receiver.cpp
Sender/: CMakeLists.txt  Makefile  Sender.vcxproj  Sender.vcxproj.filters  clp.h  sender.cpp  senderutils.cpp  senderutils.h
Sender/src/: CMakeLists.txt  sender.cpp  senderutils.cpp
SenderCLI/: CMakeLists.txt  Sender.vcxproj  Sender.vcxproj.filters
SenderCLI/src/: CMakeLists.txt  clp.h  sender.cpp  sender.h  senderutils.cpp  senderutils.h
cli/sender/: CMakeLists.txt  clp.h  sender.cpp  sender_utils.cpp  sender_utils.h  senderutils.cpp  senderutils.h
receiver/native/: APSIReceiver.vcxproj  APSIReceiver.vcxproj.filters  CMakeLists.txt
sender/apsi/: CMakeLists.txt  bin_bundle.cpp  bin_bundle.h  query.cpp  sender.cpp  sender.h  sender_db.cpp  sender_db.h
sender/native/: APSISender.vcxproj  APSISender.vcxproj.filters  CMakeLists.txt
(+696 files in other folders)
